# slack-app

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.release  README.md  build.rs
.github/workflows/: build.yml  manual_build.yml  test.yml
assets/: slack-app_manifest_v1.0.yaml
docs/: release.md
migrations/: 20230911142200_initial.sql
src/: events.rs  main.rs  testutil.rs
src/db/: migrations.rs  mod.rs  models.rs
src/db/sqlite/: mod.rs
src/service/: metrics.rs  mod.rs  router.rs
src/service/alertmanager/: errors.rs  handlers.rs  mod.rs  tests.rs
src/service/charts/: errors.rs  handlers.rs  mod.rs
src/service/event_loop/: errors.rs  mod.rs
src/service/prometheus/: errors.rs  mod.rs  tests.rs  timeseries.rs  types.rs
src/service/slack/: errors.rs  mod.rs  tests.rs
src/service/slack/snapshots/: slack_app__service__slack__tests__alert_message_with_chart.snap  slack_app__service__slack__tests__alert_message_with_explorer_button.snap  slack_app__service__slack__tests__firing_alert_message.snap  slack_app__service__slack__tests__resolved_alert_message.snap
