[package]
name = "slack-app"
version = "1.0.0"
authors = ["Fiberplane"]
edition = "2021"
build = "build.rs"
homepage = "https://fiberplane.dev"
repository = "https://github.com/fiberplane/monofiber"
keywords = ["fiberplane", "slack"]
categories = ["web-programming::http-server"]
publish = false

[dependencies]
anyhow = "1.0.52"
autometrics = { version = "0.6", default-features = false, features = [
  "prometheus",
  "prometheus-exporter",
] }
axum = { version = "0.6.1", features = [
  "headers",
  "multipart",
  "macros"
] }
clap = { version = "4.0.17", features = [
  "cargo",
  "derive",
  "env",
  "wrap_help",
] }
fiberplane = { version = "1.0.0-beta.7", features = [
  "api-client",
  "models",
  "sqlx",
] }
form_urlencoded = "1"
futures = "0.3"
mondrian-charts = { version = "0.4.0" }
once_cell = "1.13"
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11" }
reqwest = { version = "0.11.7", default-features = false }
secrecy = { version = "0.8.0", features = ["serde", "bytes"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0"
slack-morphism = { git = "https://github.com/actualwitch/slack-morphism-rust.git", branch = "feature/add-attachments-blocks", features = ["hyper"] }
sqlx = { version = "0.7.1", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "migrate",
  "time"
] }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.30"
time = { version = "0.3.17", features = ["serde-human-readable"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["map-request-body", "limit", "util"] }
tracing = "0.1"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
